portifolio content change

--- a/portifolio.html
+++ b/portifolio.html
@@ -24,7 +24,7 @@
 
 	<div>
 
-		<p>Veja abaixo a lista de portifolios relevantes</p>
+		<p>Veja abaixo a minha lista de portifolios relevantes</p>
 
 		<ul class="portifolio">
 
